--- a/.github/workflows/the-path-ci.yml
+++ b/.github/workflows/the-path-ci.yml
@@ -9,11 +9,6 @@ env:
   AWS_REGION: us-west-2
   ECR_REGISTRY: 720076871190.dkr.ecr.us-west-2.amazonaws.com
   ECR_REPOSITORY: the-path
-  ECS_SERVICE: the-path-dev-ECSService-A6eCMKg14Q2W
-  ECS_CLUSTER: arn:aws:ecs:us-west-2:720076871190:cluster/the-path
-  ECS_TASK_DEFINITION: the-path-dev
-
-  CONTAINER_NAME: the-path
 
 jobs:
   build_test:
@@ -69,6 +64,28 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
+  deploy_cloudformation:
+    runs-on: ubuntu-latest
+    needs: [push_to_docker]
+
+    steps:
+      - name: checkout repository
+        uses: actions/checkout@v2
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Deploy to AWS CloudFormation
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        with:
+          name: the-path-dev
+          template: template.yml
+          parameter-overrides: |
+            "ContainerDefaultImage=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG,Environment=dev"
       # - name: Fill in the new image ID in the Amazon ECS task definition
       #   id: task-def
       #   uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
@@ -77,10 +94,10 @@ jobs:
       #     container-name: ${{ env.CONTAINER_NAME }}
       #     image: ${{ steps.build-image.outputs.image }}
 
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@de0132cf8cdedb79975c6d42b77eb7ea193cf28e
-        with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: ${{ env.ECS_SERVICE}}
-          cluster: ${{ env.ECS_CLUSTER }}
-          wait-for-service-stability: true
+      # - name: Deploy Amazon ECS task definition
+      #   uses: aws-actions/amazon-ecs-deploy-task-definition@de0132cf8cdedb79975c6d42b77eb7ea193cf28e
+      #   with:
+      #     task-definition: ${{ steps.task-def.outputs.task-definition }}
+      #     service: ${{ env.ECS_SERVICE}}
+      #     cluster: ${{ env.ECS_CLUSTER }}
+      #     wait-for-service-stability: true
