--- a/.github/workflows/the-path-ci.yml
+++ b/.github/workflows/the-path-ci.yml
@@ -84,7 +84,7 @@ jobs:
         with:
           name: the-path-dev
           template: template.yml
-          parameter-overrides: ContainerDefaultImage={{$ECR_REGISTRY}}/{{$ECR_REPOSITORY}}:{{$IMAGE_TAG}},Environment=dev
+          parameter-overrides: "ContainerDefaultImage='{{$ECR_REGISTRY}}/{{$ECR_REPOSITORY}}:{{$IMAGE_TAG}}',Environment=dev"
       # - name: Fill in the new image ID in the Amazon ECS task definition
       #   id: task-def
       #   uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
