--- a/.github/workflows/the-path-ci.yml
+++ b/.github/workflows/the-path-ci.yml
@@ -85,8 +85,8 @@ jobs:
           name: the-path-dev
           template: template.yml
           parameter-overrides: >-
-            ContainerDefaultImage="${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}",
-            Environment="dev"
+            ContainerDefaultImage=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }},
+            Environment=dev
       # - name: Fill in the new image ID in the Amazon ECS task definition
       #   id: task-def
       #   uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
