--- a/.github/workflows/the-path-ci.yml
+++ b/.github/workflows/the-path-ci.yml
@@ -60,8 +60,10 @@ jobs:
           # build a docker container and
           # push it to ECR so that it can 
           # be deployed to ECS.
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t latest .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY --all-tags
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
   deploy_cloudformation:
@@ -85,7 +87,7 @@ jobs:
           name: the-path-dev
           template: template.yml
           parameter-overrides: >-
-            ContainerDefaultImage=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }},
+            ContainerDefaultImage=${{ steps.build-image.outputs.image }},
             Environment=dev
       # - name: Fill in the new image ID in the Amazon ECS task definition
       #   id: task-def
