--- a/.github/workflows/the-path-ci.yml
+++ b/.github/workflows/the-path-ci.yml
@@ -87,7 +87,7 @@ jobs:
           name: the-path-dev
           template: template.yml
           parameter-overrides: >-
-            ContainerDefaultImage=${{ steps.build-image.outputs.image }},
+            ContainerDefaultImage=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }},
             Environment=dev
       # - name: Fill in the new image ID in the Amazon ECS task definition
       #   id: task-def
