--- a/.github/workflows/the-path-ci.yml
+++ b/.github/workflows/the-path-ci.yml
@@ -31,6 +31,12 @@ jobs:
         run: |
           npm run build
           npm run test
+      - name: Archive .next
+        uses: actions/upload-artifact@v2
+        with:
+          name: next-build
+          path: .next
+          retention-days: 5
 
   push_to_docker:
     runs-on: ubuntu-latest
@@ -50,6 +56,13 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@aaf69d68aa3fb14c1d5a6be9ac61fe15b48453a2
+
+      - name: Download next build
+        uses: actions/download-artifact@v2
+        with:
+          name: next-build
+          run: ls -R
+          working-directory: .next
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
