--- a/.github/workflows/the-path-ci.yml
+++ b/.github/workflows/the-path-ci.yml
@@ -61,8 +61,9 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: next-build
-          run: ls -R
-          working-directory: .next
+          path: .next
+      - name: Display files
+        run: ls -R
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
@@ -79,41 +80,41 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
-  deploy_cloudformation:
-    runs-on: ubuntu-latest
-    needs: [push_to_docker]
+  # deploy_cloudformation:
+  #   runs-on: ubuntu-latest
+  #   needs: [push_to_docker]
 
-    steps:
-      - name: checkout repository
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: checkout repository
+  #       uses: actions/checkout@v2
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: ${{ env.AWS_REGION }}
 
-      - name: Deploy to AWS CloudFormation
-        uses: aws-actions/aws-cloudformation-github-deploy@v1
-        with:
-          name: the-path-dev
-          template: template.yml
-          parameter-overrides: >-
-            ContainerDefaultImage=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }},
-            Environment=dev
-      # - name: Fill in the new image ID in the Amazon ECS task definition
-      #   id: task-def
-      #   uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
-      #   with:
-      #     task-definition: ${{ env.ECS_TASK_DEFINITION }}
-      #     container-name: ${{ env.CONTAINER_NAME }}
-      #     image: ${{ steps.build-image.outputs.image }}
+  #     - name: Deploy to AWS CloudFormation
+  #       uses: aws-actions/aws-cloudformation-github-deploy@v1
+  #       with:
+  #         name: the-path-dev
+  #         template: template.yml
+  #         parameter-overrides: >-
+  #           ContainerDefaultImage=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }},
+  #           Environment=dev
+  # - name: Fill in the new image ID in the Amazon ECS task definition
+  #   id: task-def
+  #   uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
+  #   with:
+  #     task-definition: ${{ env.ECS_TASK_DEFINITION }}
+  #     container-name: ${{ env.CONTAINER_NAME }}
+  #     image: ${{ steps.build-image.outputs.image }}
 
-      # - name: Deploy Amazon ECS task definition
-      #   uses: aws-actions/amazon-ecs-deploy-task-definition@de0132cf8cdedb79975c6d42b77eb7ea193cf28e
-      #   with:
-      #     task-definition: ${{ steps.task-def.outputs.task-definition }}
-      #     service: ${{ env.ECS_SERVICE}}
-      #     cluster: ${{ env.ECS_CLUSTER }}
-      #     wait-for-service-stability: true
+  # - name: Deploy Amazon ECS task definition
+  #   uses: aws-actions/amazon-ecs-deploy-task-definition@de0132cf8cdedb79975c6d42b77eb7ea193cf28e
+  #   with:
+  #     task-definition: ${{ steps.task-def.outputs.task-definition }}
+  #     service: ${{ env.ECS_SERVICE}}
+  #     cluster: ${{ env.ECS_CLUSTER }}
+  #     wait-for-service-stability: true
