--- a/.github/workflows/the-path-ci.yml
+++ b/.github/workflows/the-path-ci.yml
@@ -11,7 +11,7 @@ env:
   ECR_REPOSITORY: the-path
 
 jobs:
-  build_test:
+  build_test_deploy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -31,20 +31,6 @@ jobs:
         run: |
           npm run build
           npm run test
-      - name: Archive .next
-        uses: actions/upload-artifact@v2
-        with:
-          name: next-build
-          path: .next
-          retention-days: 5
-
-  push_to_docker:
-    runs-on: ubuntu-latest
-    needs: [build_test]
-
-    steps:
-      - name: checkout rep
-        uses: actions/checkout@v2
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
@@ -56,14 +42,6 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@aaf69d68aa3fb14c1d5a6be9ac61fe15b48453a2
-
-      - name: Download next build
-        uses: actions/download-artifact@v2
-        with:
-          name: next-build
-          path: .next
-      - name: Display files
-        run: ls -R
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
@@ -80,29 +58,29 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
-  # deploy_cloudformation:
-  #   runs-on: ubuntu-latest
-  #   needs: [push_to_docker]
+  deploy_cloudformation:
+    runs-on: ubuntu-latest
+    needs: [push_to_docker]
 
-  #   steps:
-  #     - name: checkout repository
-  #       uses: actions/checkout@v2
+    steps:
+      - name: checkout repository
+        uses: actions/checkout@v2
 
-  #     - name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-region: ${{ env.AWS_REGION }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
-  #     - name: Deploy to AWS CloudFormation
-  #       uses: aws-actions/aws-cloudformation-github-deploy@v1
-  #       with:
-  #         name: the-path-dev
-  #         template: template.yml
-  #         parameter-overrides: >-
-  #           ContainerDefaultImage=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }},
-  #           Environment=dev
+      - name: Deploy to AWS CloudFormation
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        with:
+          name: the-path-dev
+          template: template.yml
+          parameter-overrides: >-
+            ContainerDefaultImage=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }},
+            Environment=dev
   # - name: Fill in the new image ID in the Amazon ECS task definition
   #   id: task-def
   #   uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
