--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.10",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@prisma/client": "3.3.0",
+    "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.21",
+    "csv-parse": "^4.16.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "prisma": "3.3.0",
     "typescript": "4.4.3"
   }
 }
