--- a/template.yml
+++ b/template.yml
@@ -141,7 +141,6 @@ Resources:
     Properties:
       RequiresCompatibilities:
         - FARGATE
-      ExecutionRoleArn: !Sub arn:aws:iam::${AWS::AccountId}:role/ecsTaskExecutionRole
       NetworkMode: awsvpc
       Cpu: 256
       Memory: 512
@@ -163,7 +162,8 @@ Resources:
               awslogs-stream-prefix: !Ref ECSTaskLogs
           PortMappings:
             - ContainerPort: 3000
-      TaskRoleArn: !Sub ${ECSTaskRole.Arn}
+      TaskRoleArn: !Ref ECSTaskRole
+      ExecutionRoleArn: !Ref ECSExecutionRole
 
   ECSTaskLogs:
     Type: AWS::Logs::LogGroup
@@ -171,24 +171,26 @@ Resources:
       LogGroupName: !Sub /the-path-${Environment}
       RetentionInDays: 30
 
-  ECSTaskRole:
-    Type: AWS::IAM::Role
+  ECSExecutionRole:
+    Type: AWS::IAM:Role
     Properties:
+      RoleName: !Sub the-path-ExecutionRole-${Environment}
       AssumeRolePolicyDocument:
-        Version: '2012-10-17'
         Statement:
           - Effect: Allow
             Principal:
-              Service:
-                - ecs-tasks.amazonaws.com
-            Action: sts:AssumeRole
-        # Path: /
-        # Policies:
-        #   - PolicyName: secretsmanager-access
-        #     PolicyDocument:
-        #       Version: '2012-10-17'
-        #       Statement:
-        #         - Effect: Allow
-        #           Action:
-        #             - secretsmanager:GetSecretValue
-        #           Resource: !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:the-path/${Environment}*
+              Service: ecs-tasks.amazonaws.com
+            Action: 'sts:AssumeRole'
+      ManagedPolicyArns:
+        - 'arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy'
+
+  ECSTaskRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: !Sub the-path-TaskRole-${Environment}
+      AssumeRolePolicyDocument:
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: ecs-tasks.amazonaws.com
+            Action: 'sts:AssumeRole'
