--- a/template.yml
+++ b/template.yml
@@ -121,6 +121,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 100
       DesiredCount: 2
+      HealthCheckGracePeriod: 120
       LaunchType: 'FARGATE'
       LoadBalancers:
         - ContainerName: !Sub the-path-${Environment}
