--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@googlemaps/react-wrapper": "^1.1.11",
     "@prisma/client": "3.3.0",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
