--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "@googlemaps/react-wrapper": "^1.1.11",
     "@prisma/client": "3.3.0",
+    "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "react": "17.0.2",
