--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-query": "^3.34.0"
   },
   "devDependencies": {
     "@types/react": "17.0.21",
