--- a/template.yml
+++ b/template.yml
@@ -156,7 +156,7 @@ Resources:
             - Name: NODE_ENV
               Value: production
             - Name: DATABASE_URL
-              Vaule: !Ref DatabaseUrl
+              Value: !Ref DatabaseUrl
             - Name: NEXT_PUBLIC_GOOGLE_MAPS_API_KEY
               Value: !Ref GoogleMapsApiKey
           Essential: true
