--- a/.github/workflows/the-path-ci.yml
+++ b/.github/workflows/the-path-ci.yml
@@ -82,7 +82,7 @@ jobs:
             ContainerDefaultImage=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }},
             Environment=dev,
             DatabaseUrl=${{secrets.DATABASE_URL}},
-            GoogleMapsApiKey=${{secrets.NEXT_PUBLIC_GOOGLE_MAPS_API_KEY}}
+            GoogleMapsApiKey=${{secrets.GOOGLE_MAPS_API_KEY}}
   # - name: Fill in the new image ID in the Amazon ECS task definition
   #   id: task-def
   #   uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
