--- a/.github/workflows/the-path-ci.yml
+++ b/.github/workflows/the-path-ci.yml
@@ -19,6 +19,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        env:
+          NEXT_PUBLIC_GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
       - name: setup node
         uses: actions/setup-node@master
         with:
@@ -81,8 +84,6 @@ jobs:
           parameter-overrides: >-
             ContainerDefaultImage=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }},
             Environment=dev,
-            DatabaseUrl=${{ secrets.DATABASE_URL }},
-            GoogleMapsApiKey=${{ secrets.GOOGLE_MAPS_API_KEY }}
   # - name: Fill in the new image ID in the Amazon ECS task definition
   #   id: task-def
   #   uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
