--- a/template.yml
+++ b/template.yml
@@ -14,6 +14,8 @@ Parameters:
   VpcId:
     Type: AWS::EC2::VPC::Id
     Default: vpc-01ddcd882610d58c3
+  DatabaseUrl:
+    Type: String
 
 Mappings:
   Environment:
@@ -151,6 +153,8 @@ Resources:
               Value: !Ref Environment
             - Name: NODE_ENV
               Value: production
+            - Name: DATABASE_URL
+              Value: !Ref DatabaseUrl
           Essential: true
           Image: !Ref ContainerDefaultImage
           Name: !Sub the-path-${Environment}
