--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
+    "next-auth": "^4.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
