--- a/.github/workflows/the-path-ci.yml
+++ b/.github/workflows/the-path-ci.yml
@@ -84,19 +84,7 @@ jobs:
           parameter-overrides: >-
             ContainerDefaultImage=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }},
             Environment=dev,
-            DatabaseUrl=${{ secrets.DATABASE_URL }}
-  # - name: Fill in the new image ID in the Amazon ECS task definition
-  #   id: task-def
-  #   uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
-  #   with:
-  #     task-definition: ${{ env.ECS_TASK_DEFINITION }}
-  #     container-name: ${{ env.CONTAINER_NAME }}
-  #     image: ${{ steps.build-image.outputs.image }}
-
-  # - name: Deploy Amazon ECS task definition
-  #   uses: aws-actions/amazon-ecs-deploy-task-definition@de0132cf8cdedb79975c6d42b77eb7ea193cf28e
-  #   with:
-  #     task-definition: ${{ steps.task-def.outputs.task-definition }}
-  #     service: ${{ env.ECS_SERVICE}}
-  #     cluster: ${{ env.ECS_CLUSTER }}
-  #     wait-for-service-stability: true
+            DatabaseUrl=${{ secrets.DATABASE_URL }},
+            Auth0ClientId=${{ secrets.AUTH0_CLIENT_ID }},
+            Auth0ClientSecret=${{ secrets.AUTH0_CLIENT_SECRET }},
+            Auth0Domain=${{ secrets.AUTH0_DOMAIN }}
