--- a/.github/workflows/the-path-ci.yml
+++ b/.github/workflows/the-path-ci.yml
@@ -87,5 +87,5 @@ jobs:
             DatabaseUrl=${{ secrets.DATABASE_URL }},
             Auth0ClientId=${{ secrets.AUTH0_CLIENT_ID }},
             Auth0ClientSecret=${{ secrets.AUTH0_CLIENT_SECRET }},
-            Auth0Domain=${{ secrets.AUTH0_DOMAIN }}
-            NextAuthUrl=https://takehepath.org
+            Auth0Domain=${{ secrets.AUTH0_DOMAIN }},
+            NextAuthUrl="https://takehepath.org"
