--- a/.github/workflows/the-path-ci.yml
+++ b/.github/workflows/the-path-ci.yml
@@ -20,6 +20,7 @@ jobs:
       AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
       AUTH0_CLIENT_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
       AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
+      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
     strategy:
       matrix:
         node-version: [14.x]
@@ -92,4 +93,5 @@ jobs:
             Auth0ClientId=${{ secrets.AUTH0_CLIENT_ID }},
             Auth0ClientSecret=${{ secrets.AUTH0_CLIENT_SECRET }},
             Auth0Domain=${{ secrets.AUTH0_DOMAIN }},
-            NextAuthUrl=https://takehepath.org
+            NextAuthUrl=https://takehepath.org,
+            NextAuthSecret=${{ secrets.NEXTAUTH_SECRET }}
