--- a/template.yml
+++ b/template.yml
@@ -24,6 +24,8 @@ Parameters:
     Type: String
   NextAuthUrl:
     Type: String
+  NextAuthSecret:
+    Type: String
 
 Mappings:
   Environment:
@@ -171,6 +173,8 @@ Resources:
               Value: !Ref Auth0Domain
             - Name: NEXTAUTH_URL
               Value: !Ref NextAuthUrl
+            - Name: NEXTAUTH_SECRET
+              Value: !Ref NextAuthSecret
           Essential: true
           Image: !Ref ContainerDefaultImage
           Name: !Sub the-path-${Environment}
