--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@googlemaps/react-wrapper": "^1.1.11",
     "@prisma/client": "3.3.0",
     "axios": "^0.24.0",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "next-auth": "^4.1.2",
@@ -23,7 +24,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-query": "^3.34.0"
+    "react-query": "^3.34.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "17.0.21",
